fix bug about checkout page not showing while user dont have any address, added no address conditions to the page

--- a/src/app/checkout/checkout.module.scss
+++ b/src/app/checkout/checkout.module.scss
@@ -83,3 +83,19 @@
     }
   }
 }
+
+.layout {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: center;
+  height: 75vh;
+  p {
+    color: $black;
+  }
+
+  a {
+    color: $secondary-strong;
+  }
+}
